# jwein-blog

./: CMakeLists.txt  README.md
cmake/: test_compile.cmake
posts/: corona-virus-analysis.md  generic-and-template-classes-in-c.md
scripts/: csingle.py
src/: cvirus.c  cvirus.cpp  jsonq.c
